# SmartPatrol

./: CMakeLists.txt  README.md  main.cpp
include/business_layer/: camera_service.h  video_recorder.h
include/business_layer/ai/: ai_model_service.h  ai_recognize.h  iai_model_service.h
include/business_layer/camera/: camera.h  camera_info.h  camera_manager.h  icamera_manager.h
include/business_layer/device/: device_info.h  device_manager.h  idevice_manager.h
include/business_layer/http/: http_client.h
include/business_layer/mqtt/: device_status_reporter.h  icommand_dispatcher.h  mqtt_command_dispatcher.h  mqtt_service.h  mqtt_topics.h  my_mqtt_callback.h
include/business_layer/sensor/: controller_service.h
include/business_layer/task/: itask.h  itask_result_publisher.h  job_scheduler.h  task.h  task_result_publisher.h
include/common/: FrameData.h  camerainfo.h  threadsafe_queue.h
include/common/FileUtils/: FileUtils.cpp  FileUtils.h
include/common/Imageprocess/: ImageProcessor.cpp  ImageProcessor.h
include/common/base64/: base64.cpp  base64.h
include/common/config/: config.json  configTest.cpp  config_info.h  config_parser.cpp  config_parser.h
include/common/logger/: logger.cpp  logger.h
include/common/threads/: join_threads.h  thread_pool.h
include/common/timestamp/: SegmentManager.cpp  SegmentManager.h  TimestampAdjuster.h
include/common/utils/yolo8/: postprocess.cc  postprocess.h
include/data_layer/: icontroller.h  isensor.h  sensor_reader.h  video_capture.h
include/data_layer/camera/: video_storage.h
include/data_layer/sensor/: icontroller.h
include/presentation_layer/: http_service_tcp.h
src/: CMakeLists.txt
src/business_layer/: camera_service.cpp  controller_service.cpp  sensor_service.cpp  video_recorder.cpp
src/business_layer/ai/: ai_model_service.cpp  ai_recognize.cpp
src/business_layer/camera/: camera.cpp  camera_manager.cpp
src/business_layer/device/: device_manager.cpp
src/business_layer/http/: HttpClient.cpp
src/business_layer/mqtt/: device_status_reporter.cpp  mqtt_command_dispatcher.cpp  mqtt_service.cpp
src/business_layer/sensor/: sensor_service.cpp
src/business_layer/task/: job_scheduler.cpp  task.cpp
src/data_layer/: sensor_reader.cpp  video_capture.cpp  video_storage.cpp
src/presentation_layer/: HTTPCommandController.cpp  WebService.cpp
test/: cameraTest.cpp  httpServiceText.cpp  httpText.cpp  http_client.cpp  taskTest.cpp  videoTest.cpp
